@startuml
'https://plantuml.com/class-diagram

class ListManager {
    main()
    start()
}

class ListManagerController {
    ObservableList<Item> list
    ObservableList<Item> completed
    ObservableList<Item> incompleted

    addItem()
    removeItem()
    clearAll()
    updateItem()
    markComplete()
    markIncomplete()
    displayComplete()
    displayIncomplete()
    exportList()
    importList()
}

class Item {
    desc: String
    dueDate: String
    complete: boolean
}

javafx.Application <|-- ListManager

ListManager - ListManagerController
ListManagerController *--> Item


@enduml